--- a/css/test.css
+++ b/css/test.css
@@ -1,4 +1,4 @@
-html{
+html {
 	margin: 0; 
 	padding: 0;
 }
@@ -13,7 +13,8 @@ body {
 .jumbotron {
 	background: #191A19;
 	color: white;
-	text-align: center;
+    text-align: center;
+    margin-bottom: 0;
 }
 .jumbotron p {
 	color: white;
@@ -47,14 +48,45 @@ body {
     color: #fff;
     /* text-transform: uppercase; */
     font-family: 'Dancing Script', 'Arial', cursive;
-    font-size: 20px;
+    font-size: 25px;
+}
+.navbar-default {
+    background-color: #f8f8f8;
+    border-color: #bf9b30;
 }
 .projects {
     text-align: center;
     background: #000000;
+    height: 500px;
 }
 .projects p {
 	margin-bottom: 30px;
-	font-family: sans-serif;
+    font-family: sans-serif;
+    color: white;
+}
+.jumbotron .h1, .jumbotron h1{
+    font-size: 55px;
+}
+.jumbotron p {
+    color: white;
+    font-size: 16px;
+    line-height: 26px;
+    
+}
+.fadein-fast {
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+     -ms-animation: fadein 2s; /* Internet Explorer */
+      -o-animation: fadein 2s; /* Opera < 12.1 */
+         animation: fadein 2s;
+}
+p {
+    display: block;
+}
+/* .card {
+    background: white;
+} */
+h3, alt {
+    color: white;
 }
 
