--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 html {
 	margin: 0; 
 	padding: 0;
@@ -8,21 +11,23 @@ body {
     padding-bottom: 70px; 
 }
 .navbar {
-	margin-bottom: 0;
+    margin-bottom: 0;
+    min-height: 70px;
 }
-.jumbotron {
+#top {
 	background: #191A19;
 	color: white;
     text-align: center;
     margin-bottom: 0;
 }
-.jumbotron p {
+#top p {
 	color: white;
-	font-size: 26px;
+    font-size: 26px;
+    line-height: 26px;
 }
 .btn-primary {
 	color: #fff;
-	background-color: transparent;
+	background-color: black;
 	border-color: #bf9b30;
 	margin-bottom: 5px;
 }
@@ -54,25 +59,23 @@ body {
     background-color: #f8f8f8;
     border-color: #bf9b30;
 }
-.projects {
+#projects {
     text-align: center;
     background: #000000;
     height: 500px;
+    overflow: auto;
+    padding-bottom: 50px;
+    height:1000
 }
-.projects p {
+#projects p {
 	margin-bottom: 30px;
     font-family: sans-serif;
     color: white;
 }
-.jumbotron .h1, .jumbotron h1{
+#top .h1, #top h1{
     font-size: 55px;
 }
-.jumbotron p {
-    color: white;
-    font-size: 16px;
-    line-height: 26px;
     
-}
 .fadein-fast {
     -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 2s; /* Firefox < 16 */
@@ -88,5 +91,39 @@ p {
 } */
 h3, alt {
     color: white;
+}
+.typer-component {
+    top: 20px;
+    position: absolute;
+    bottom: 0;
+    clear: left;
+    color: black;
+    font-family: 'Dancing Script', cursive;
+    font-weight: bold;
+    font-size: 25px;
+}
+.social-box {
+    list-style-type: none;
+    display: flex;
+}
+.pull-right {
+    float: right !important;
+}
+.pull-left {
+    float: left !important;
+}
+.icon {
+    color: #191A19;
+    font-size: 2em;
+}
+#top{
+    background-image: url(../img/coffe-mac-copy-op.png);
+    padding: 10em 0;
+    /* height: 800px; */
+    background-size: cover;
+}
+img{
+    max-width: 100%;
+    height: auto;
 }
 
